--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Applying Css</title>
-    <!-- Internal css -->
-     
-    <link rel="stylesheet" href="style.css">
+    <title>Selector in CSS</title>
+    <link rel="stylesheet" href="selector.css">
 </head>
 <body>
-    <!--Inline CSS-->
-    <h1 style="color: blue;
-    background-color: pink;">Manish CSS</h1>
-    <p style="color: blueviolet;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eum tempore, eaque, debitis labore pariatur assumenda magnam, commodi inventore iste non sequi doloremque dolore illum est praesentium a! Deleniti nam nihil minima sit eveniet neque? Voluptatum, itaque voluptas? Rerum amet ea incidunt doloribus aperiam itaque iste quis, provident ipsa dolore?</p>
+    <!-- universal selector,#,.-- -->
+    <p id="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, ex dolore delectus itaque ut reiciendis voluptas veritatis sapiente repellat est, inventore atque, facere commodi eligendi eaque! Possimus minima eum itaque a ut maxime quidem dolorem labore ullam placeat sed recusandae nobis sit eaque sunt, mollitia adipisci ex natus laudantium! Amet!</p>
 
+    <p class="para2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe accusantium facilis quaerat ipsum architecto rerum quisquam nulla eius. Magni, illum!</p>
 
-    <span>Hello i am span tag of non -semantic element(div-span)</span>
-        
+    <p id="para3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis at sed temporibus vero quis impedit perferendis numquam nemo facere dolor nulla quas dolorem tempore adipisci voluptates nisi aspernatur, molestiae illum dolores? Obcaecati.</p>
+
+    <h1>I am CSS Selector</h1>
+    <h2>Hello World</h2>
 </body>
 </html>
